crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__pipe_stats_no_group.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | stats count()\")"
---
SELECT COUNT(*) AS "count"
FROM read_parquet('/data/**/*.parquet')
