crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__pipe_stats_with_group.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | stats count() by host\")"
---
SELECT "host", COUNT(*) AS "count"
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
GROUP BY "host"
