crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__pipe_timechart_auto_bucket_1h.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"last:1h | timechart count()\")"
---
SELECT time_bucket(INTERVAL '1 minutes', "timestamp") AS "_time", COUNT(*) AS "count"
FROM read_parquet('/data/**/*.parquet')
WHERE "timestamp" >= now()::TIMESTAMP - INTERVAL '1 hours'
GROUP BY "_time"
ORDER BY "_time" ASC
