crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__pipe_timechart_by_then_where.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"last:1h | timechart span=5m count() by level | where count > 10\")"
---
WITH _s0 AS (
  SELECT time_bucket(INTERVAL '5 minutes', CAST("timestamp" AS TIMESTAMP)) AS "_time", "level", COUNT(*) AS "count"
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
  WHERE CAST("timestamp" AS TIMESTAMP) >= now()::TIMESTAMP - INTERVAL '1 hours'
  GROUP BY "_time", "level"
  ORDER BY "_time" ASC
)
SELECT *
FROM "_s0"
WHERE ("count" > ?)
---
params:
  0: 10
