crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__pipe_timechart_explicit_span.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | timechart span=5m count()\")"
---
SELECT time_bucket(INTERVAL '5 minutes', CAST("timestamp" AS TIMESTAMP)) AS "_time", COUNT(*) AS "count"
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
GROUP BY "_time"
ORDER BY "_time" ASC
